--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>MEME</title>
+    <title>밈 특허청</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
